Fixed the padding of the experiences section on mobile

--- a/src/components/sections/career/experiences/Experiences.module.css
+++ b/src/components/sections/career/experiences/Experiences.module.css
@@ -18,7 +18,6 @@
     flex-direction: row;
 }
 
-
 .tabs {
     width: 260px;
     margin-right: 50px;
@@ -105,8 +104,9 @@
     }
 
     .tabs p {
+        text-align: center;
         margin: 0;
-        padding: 12px 24px;
+        padding: 12px 16px;
     }
 
     .tabs p {
